--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -14,7 +14,7 @@ jobs:
             node-version: '20.x'
         - name: Install Dependencies
           run: npm ci
-          working-directory: react-app
+          working-directory: workflows/04-using-actions/react-app
     # 0. Checkout the code from the repository
     # 1. Install deps of our react application
     # 2. Execute automated tests
