--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -16,5 +16,4 @@ jobs:
           run: npm ci
           working-directory: "04-using-actions/react-app"
     # 0. Checkout the code from the repository
-    # 1. Install deps of our react application
-    # 2. Execute automated tests
+    # 1. Install deps of our react applicat
