--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -1,19 +1,22 @@
 name: 04 - Using Actions
+ 
 on: push
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-        - name: Checkout Code
-          uses: actions/checkout@v4
-        - name: Printing Folders
-          run: ls
-        - name: Setup Node
-          uses: actions/setup-node@v4
-          with:
-            node-version: '20.x'
-        - name: Install Dependencies
-          run: npm ci
-          working-directory: "04-using-actions/react-app"
-    # 0. Checkout the code from the repository
-    # 1. Install deps of our react applicat
+      - name: Checkout Code
+        uses: actions/checkout@v4
+ 
+      - name: Printing Folders
+        run: ls
+ 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+ 
+      - name: Install Dependencies
+        run: npm ci
+        working-directory: gh-actions-course/04-using-actions/react-app
