--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -1,5 +1,5 @@
 name: 04 - Using Actions
-on: push
+on: workflow_dispatch
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -7,6 +7,8 @@ jobs:
           run:
             working-directory: 04-using-actions/react-app
         steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
             - name: Setup Node
               uses: actions/setup-node@v4
               with:
